# analysis-environment

./: .pre-commit-config.yaml  README.md  macros.tex  mkdocs.yml  noxfile.py  package-lock.json  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  index.md  index.rst  sample.md  sample.rst
src/sample/: calculation.py
tests/: test_calculation.py
