[tool.poetry]
name = "sample"
version = "0.1.0"
description = "Default repository for analysis project."
authors = ["wattai"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-autobuild = "^2021.3.14"
flake8-annotations = "^2.7.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
darglint = "^1.8.1"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.0.3"
mkdocstrings = "^0.16.2"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"
markdown-katex = "^202109.1033"
pre-commit = "^2.16.0"
isort = "^5.10.1"
docformatter = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
